infrastructure/dev/ux-client/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ${UX_APIM_RESOURCE_NAME}
  namespace: ${UX_APP_NAMESPACE}
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
spec:
  host: ${UX_APIM_LOGICAL_HOST}
  exportTo:
  - .
  trafficPolicy:
    loadBalancer:
      simple: ${UX_LOAD_BALANCER_POLICY}
      localityLbSetting:
        enabled: true
        failover:
        - from: ${UX_APIM_WESTUS2_LOCALITY}
          to: ${UX_APIM_WESTUS3_LOCALITY}
        - from: ${UX_APIM_WESTUS3_LOCALITY}
          to: ${UX_APIM_WESTUS2_LOCALITY}
    connectionPool:
      tcp:
        connectTimeout: ${UX_CONNECT_TIMEOUT}
        maxConnections: ${UX_MAX_CONNECTIONS}
        tcpKeepalive:
          probes: ${UX_TCP_KEEPALIVE_PROBES}
          time: ${UX_TCP_KEEPALIVE_TIME}
          interval: ${UX_TCP_KEEPALIVE_INTERVAL}
      http:
        http1MaxPendingRequests: ${UX_HTTP1_MAX_PENDING_REQUESTS}
        http2MaxRequests: ${UX_HTTP2_MAX_REQUESTS}
        maxRequestsPerConnection: ${UX_MAX_REQUESTS_PER_CONNECTION}
        maxRetries: ${UX_MAX_RETRIES}
        idleTimeout: ${UX_IDLE_TIMEOUT}
        h2UpgradePolicy: ${UX_H2_UPGRADE_POLICY}
    outlierDetection:
      splitExternalLocalOriginErrors: true
      consecutiveLocalOriginFailures: ${UX_CONSECUTIVE_LOCAL_ORIGIN_FAILURES}
      consecutiveGatewayErrors: ${UX_CONSECUTIVE_GATEWAY_ERRORS}
      consecutive5xxErrors: ${UX_CONSECUTIVE_5XX_ERRORS}
      interval: ${UX_OUTLIER_INTERVAL}
      baseEjectionTime: ${UX_BASE_EJECTION_TIME}
      maxEjectionPercent: ${UX_MAX_EJECTION_PERCENT}
      minHealthPercent: ${UX_MIN_HEALTH_PERCENT}
    tls:
      mode: ${UX_TLS_MODE}
      sni: ${UX_APIM_LOGICAL_HOST}
      subjectAltNames:
      - ${UX_APIM_LOGICAL_HOST}
      insecureSkipVerify: ${UX_INSECURE_SKIP_VERIFY}
  workloadSelector:
    matchLabels:
      app: ${UX_APP_NAME}
