infrastructure/dev/ux-client/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: ${UX_APIM_RESOURCE_NAME}
  namespace: ${UX_APP_NAMESPACE}
  labels:
    networking.istio.io/enable-autoallocate-ip: "true"
spec:
  hosts:
    - ${UX_APIM_LOGICAL_HOST}
  exportTo:
  - .
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
    - number: ${UX_APIM_SERVICE_PORT}
      name: ${UX_APIM_SERVICE_PORT_NAME}
      protocol: ${UX_APIM_PROTOCOL}
      targetPort: ${UX_APIM_TARGET_PORT}
  subjectAltNames:
    - ${UX_APIM_LOGICAL_HOST}
  endpoints:
    - address: ${UX_APIM_WESTUS2_ADDRESS}
      locality: ${UX_APIM_WESTUS2_LOCALITY}
      weight: ${UX_APIM_WESTUS2_WEIGHT}
      labels:
        topology.kubernetes.io/region: ${UX_APIM_WESTUS2_LOCALITY}
      ports:
        "${UX_APIM_SERVICE_PORT_NAME}": ${UX_APIM_TARGET_PORT}
    - address: ${UX_APIM_WESTUS3_ADDRESS}
      locality: ${UX_APIM_WESTUS3_LOCALITY}
      weight: ${UX_APIM_WESTUS3_WEIGHT}
      labels:
        topology.kubernetes.io/region: ${UX_APIM_WESTUS3_LOCALITY}
      ports:
        "${UX_APIM_SERVICE_PORT_NAME}": ${UX_APIM_TARGET_PORT}
